--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading"> {{post.title}} </h4>
-              <i>{{(post.created_at | date)}}</i> <br>
+              <i>{{(post.created_at | amCalendar)}}</i> <br>
 
               {{post.text}}
 
