--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -5,8 +5,8 @@
     <title>Dashboard</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+    <script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
@@ -30,23 +30,29 @@
 					<div class="tab-content">
 						<div id="clubs" class="tab-pane active" role="tabpanel">
 							<div class="list-group">
-								<a class="list-group-item list-group-item-action" *ngFor="let club of clubs | async">
+                <div *ngFor="let club of clubs | async">
+								<a (click)="sendToClub(club.id)" class="list-group-item list-group-item-action" >
 									{{club.name}}
 								</a>
+              </div>
 							</div>
 						</div>
 						<div id="teams" class="tab-pane" role="tabpanel">
 							<div class="list-group">
-								<a class="list-group-item list-group-item-action" *ngFor="let team of teams | async">
+                <div *ngFor="let team of teams | async">
+								<a (click)="sendToTeam(team.id)" class="list-group-item list-group-item-action" >
 									{{team.name}}
 								</a>
+              </div>
 							</div>
 						</div>
 						<div id="players" class="tab-pane" role="tabpanel">
 							<div class="list-group">
-								<a class="list-group-item list-group-item-action" *ngFor="let player of players | async">
+                <div *ngFor="let player of players | async">
+								<a (click)="sendToPlayer(player.id)" class="list-group-item list-group-item-action" >
 									{{player.first_name + " " + player.last_name}}
 								</a>
+              </div>
 							</div>
 						</div>
 					</div>
