player-search-done

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,9 +1,17 @@
 
 
 
-<!--<ul *ngFor="let player of this.results">
-  <li>{{ player.first_name }}</li>
-</ul>-->
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Players</h3>
+  </div>
+  <div class="panel-body">
+    <ul *ngFor="let player of players">
+      <li>{{player.first_name}}</li>
+    </ul>
+  </div>
+</div>
 
 
 
