--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -29,8 +29,9 @@
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <search></search>
-      <div class="nav navbar-nav navbar-right">
+
+        <app-search></app-search>
+    <div class="nav navbar-nav navbar-right">
         <div [hidden]="!authService.registered">
           <div class="dropdown">
             <span>{{ currentUser.displayName }}</span>
