--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -24,7 +24,7 @@
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <search></search>
+        <app-search></app-search>
     <div class="nav navbar-nav navbar-right">
         <div [hidden]="!authService.registered">
         <div class="dropdown">
