[AM] Code cleanup

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Latest compiled and minified CSS -->
-<html lang="en" ng-app="skeleton_app">
+<html lang="en">
 
 <head>
   <title>User Profile</title>
