--- a/src/app/navbar/navbar-component.css
+++ b/src/app/navbar/navbar-component.css
@@ -7,8 +7,7 @@
     padding:5px 5px 0;
 }
 .user {
-  background-position: center center;
-  background-repeat: no-repeat;
+  background: no-repeat center center;
   background-size: cover;
   border-radius: 50%;
   display: inline-block;
@@ -24,7 +23,7 @@
 }
 .dropdown-content {
     background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     display: none;
     min-width: 160px;
     padding: 12px 16px;
