--- a/src/app/player-profile/player-component.html
+++ b/src/app/player-profile/player-component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="skeleton_app">
+<html lang="en">
   <head>
     <title>Player</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" rel="stylesheet"/>
