--- a/src/app/player-profile/player.component.html
+++ b/src/app/player-profile/player.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Dashboard</title>
+  <title>Player</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
           integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
@@ -9,18 +9,30 @@
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7"/>
+
 </head>
 <body>
-<br>
-<div style="text-align:center">
-  <h1>Dashboard</h1>
-</div>
-<hr>
-<br>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6 text-left">
 
-<app-post *ngFor="let post of posts " [post]="post"></app-post>
+      <!-- MEDIA ITEM FOR PLAYER CARD -->
+      <h1>{{(playerData | async)?.first_name}} {{(playerData | async)?.last_name}}</h1>
+
+
+    </div>
+  </div>
+</div>
+<br>
+<div class="pad">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        <app-post *ngFor="let post of playerPosts " [post]="post"></app-post>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
