--- a/src/app/players-followed/players-followed.html
+++ b/src/app/players-followed/players-followed.html
@@ -4,35 +4,38 @@
   <title>Players Followed</title>
 </head>
 <p-dataList [value]="players" [paginator]="true" [rows]="5">
-    <p-header>
-        <h3>List of Players</h3>
-    </p-header>
-    <template let-player pTemplate="item">
-        <div class="ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px;border-bottom:1px solid #D5D5D5;">
+  <p-header>
+    <h3>List of Players</h3>
+  </p-header>
+  <template let-player pTemplate="item">
+    <div class="ui-grid ui-grid-responsive ui-fluid"
+         style="font-size:16px;padding:20px;border-bottom:1px solid #D5D5D5;">
+      <div class="ui-grid-row">
+        <div class="ui-grid-col-3" style="text-align:center"><i class="fa fa-search" (click)="selectPlayer( player.id )"
+                                                                style="cursor:pointer;float:left;margin-top:40px"></i><img
+          src="{{player.avatar}}"></div>
+        <div class="ui-grid-col-9">
+          <div class="ui-grid ui-grid-responsive ui-fluid">
             <div class="ui-grid-row">
-                <div class="ui-grid-col-3" style="text-align:center"><i class="fa fa-search" (click)="selectPlayer( player.id )" style="cursor:pointer;float:left;margin-top:40px"></i><img src="{{player.avatar}}"></div>
-                <div class="ui-grid-col-9">
-                    <div class="ui-grid ui-grid-responsive ui-fluid">
-                        <div class="ui-grid-row">
-                            <div class="ui-grid-col-2">First Name: </div>
-                            <div class="ui-grid-col-10">{{player.first_name}}</div>
-                        </div>
-                        <div class="ui-grid-row">
-                            <div class="ui-grid-col-2">Last Name: </div>
-                            <div class="ui-grid-col-10">{{player.last_name}}</div>
-                        </div>
-                        <div class="ui-grid-row">
-                            <div class="ui-grid-col-2">Bio: </div>
-                            <div class="ui-grid-col-10">{{player.bio}}</div>
-                        </div>
-                        <div class="ui-grid-row">
-                            <div class="ui-grid-col-2">Location: </div>
-                            <div class="ui-grid-col-10">{{player.location}}</div>
-                        </div>
-                    </div>
-                </div>
+              <div class="ui-grid-col-2">First Name:</div>
+              <div class="ui-grid-col-10">{{player.first_name}}</div>
             </div>
+            <div class="ui-grid-row">
+              <div class="ui-grid-col-2">Last Name:</div>
+              <div class="ui-grid-col-10">{{player.last_name}}</div>
+            </div>
+            <div class="ui-grid-row">
+              <div class="ui-grid-col-2">Bio:</div>
+              <div class="ui-grid-col-10">{{player.bio}}</div>
+            </div>
+            <div class="ui-grid-row">
+              <div class="ui-grid-col-2">Location:</div>
+              <div class="ui-grid-col-10">{{player.location}}</div>
+            </div>
+          </div>
         </div>
-    </template>
+      </div>
+    </div>
+  </template>
 </p-dataList>
 </html>
