--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -30,10 +30,12 @@
           <div class="row">
             <div class="col-sm-12">
               <b>{{likes.length}} likes</b>
-              <button *ngIf="likes.indexOf(currentUserId) !== -1" type="button" class="btn btn-primary pull-right btn-sm" (click)="likeToggle(currentUserId)">
+              <button *ngIf="likes.indexOf(currentUserId) !== -1" type="button"
+                      class="btn btn-primary pull-right btn-sm" (click)="likeToggle(currentUserId)">
                 <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
               </button>
-              <button *ngIf="likes.indexOf(currentUserId) === -1" type="button" class="btn btn-primary pull-right btn-sm" (click)="likeToggle(currentUserId)">
+              <button *ngIf="likes.indexOf(currentUserId) === -1" type="button"
+                      class="btn btn-primary pull-right btn-sm" (click)="likeToggle(currentUserId)">
                 <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
               </button>
             </div>
@@ -47,7 +49,8 @@
 
               {{postComment.comment}}
 
-              <button type="button" class="btn btn-danger btn-sm pull-right" (click)="deleteComment(postComment.$key, post.id)">
+              <button type="button" class="btn btn-danger btn-sm pull-right"
+                      (click)="deleteComment(postComment.$key, post.id)">
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
               </button>
 
@@ -63,7 +66,8 @@
           <div class="form-group">
             <label>Comment:</label>
             <input type="text" #newComment/>
-            <button class="btn btn-primary btn-sm pull-right" (click)="addComment(newComment.value, post.id)">Add</button>
+            <button class="btn btn-primary btn-sm pull-right" (click)="addComment(newComment.value, post.id)">Add
+            </button>
           </div>
 
         </div>
