--- a/src/app/team-profile/team-component.html
+++ b/src/app/team-profile/team-component.html
@@ -1,107 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title> Team Profile </title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-    <script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
-    <meta charset="UTF-8">
-<style>
-    .pad{
-        padding: 15px;
+<head>
+  <title> Team Profile </title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" rel="stylesheet"/>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+          integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+          crossorigin="anonymous"></script>
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+  <script src="https://npmcdn.com/bootstrap@4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8">
+  <style>
+    .pad {
+      padding: 15px;
     }
-</style>
+  </style>
 </head>
-    <body>
-    <div id="includedContent"></div>
-    <div class="container-fluid">
-        <div class = "row">
-        <div class="col-sm-6 text-left">
-            <div class="col-md-6 text-left">
-            <img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
+<body>
+<div id="includedContent"></div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6 text-left">
+      <div class="col-md-6 text-left">
+        <img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
               display:block; margin:auto;" src="http://robohash.org/sitsequiquia.png?size=120x120">
-            </div>
-            <div class="col-sm-6 text-left"></div>
-            <h1>Team Name</h1>
-            <button type="button" class="btn btn-default btn-lg">
-            <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Follow
-                </button>
-            </div>
-        <div class="col-sm-6 text-left">
-             </div>
-            </div>
-            </div>
-        <br>
-<div class="pad">
-<div class="card-group">
-  <div class="card">
-  <img class="card-img-top" src="http://www.my-hd-wallpapers.com/wall_format/1409780147_welded-rugbymen-group_facebk.jpg" alt="Card image cap">
-  <div class="card-block">
-    <p class="card-text">Cover Image?</p>
+      </div>
+      <div class="col-sm-6 text-left"></div>
+      <h1>Team Name</h1>
+      <button type="button" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Follow
+      </button>
+    </div>
+    <div class="col-sm-6 text-left">
+    </div>
   </div>
 </div>
-        </div>
-
- <div class="container-fluid">
-        <div class = "row">
-        <div class="col-sm-6 text-left">
-             <div class="card card-default">
-      <div class="card-header">Title</div>
-      <div class="card-block">Content</div>
-        </div>
-            <div class="row">
-            <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-            <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
-                <div class="form-group">
-  <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
-</div>
-            </div><br>
-             <div class="card card-default">
-      <div class="card-header">Title</div>
-      <div class="card-block">Content</div>
+<br>
+<div class="pad">
+  <div class="card-group">
+    <div class="card">
+      <img class="card-img-top"
+           src="http://www.my-hd-wallpapers.com/wall_format/1409780147_welded-rugbymen-group_facebk.jpg"
+           alt="Card image cap">
+      <div class="card-block">
+        <p class="card-text">Cover Image?</p>
+      </div>
     </div>
-            <div class="row">
-            <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-                <button class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
-                <div class="form-group">
-  <label for="comment">Comment:</label>
-  <textarea class="form-control" rows="5" id="comment1"></textarea>
-</div>
-            </div><br>
-            </div>
-        <div class="col-sm-6 text-left">
-             <div class="panel panel-primary">
-            <div class="panel-heading">Twitter feed in here</div>
-            <div class="panel-body">Feed. Will extend accordingly.</div>
-            </div>
-            <div class="panel panel-primary">
-            <div class="panel-heading">Facebook feed in here</div>
-            <div class="panel-body">Feed. Will extend accordingly.</div>
-            </div>
-             </div>
-            </div>
-            </div>
-        </div>
+  </div>
+
   <div class="container-fluid">
-    <h3> Players</h3>
-    <div class="list-group">
-  <a href="/player" class="list-group-item list-group-item-action">Player 1</a>
-  <a href="#" class="list-group-item list-group-item-action">Player 2</a>
-  <a href="#" class="list-group-item list-group-item-action">Player 3</a>
-  <a href="#" class="list-group-item list-group-item-action disabled">Player 4</a>
-</div>
+    <div class="row">
+      <div class="col-sm-6 text-left">
+        <div class="card card-default">
+          <div class="card-header">Title</div>
+          <div class="card-block">Content</div>
+        </div>
+        <div class="row">
+          <button class="btn btn-default pull-right" style="text-align:center"><i
+            class="glyphicon glyphicon-thumbs-up"></i></button>
+          <button class="btn btn-default pull-right" style="text-align:center"><i
+            class="glyphicon glyphicon-share-alt"></i></button>
+          <div class="form-group">
+            <label for="comment">Comment:</label>
+            <textarea class="form-control" rows="5" id="comment"></textarea>
+          </div>
+        </div>
+        <br>
+        <div class="card card-default">
+          <div class="card-header">Title</div>
+          <div class="card-block">Content</div>
+        </div>
+        <div class="row">
+          <button class="btn btn-default pull-right" style="text-align:center"><i
+            class="glyphicon glyphicon-thumbs-up"></i></button>
+          <button class="btn btn-default pull-right" style="text-align:center"><i
+            class="glyphicon glyphicon-share-alt"></i></button>
+          <div class="form-group">
+            <label for="comment">Comment:</label>
+            <textarea class="form-control" rows="5" id="comment1"></textarea>
+          </div>
+        </div>
+        <br>
+      </div>
+      <div class="col-sm-6 text-left">
+        <div class="panel panel-primary">
+          <div class="panel-heading">Twitter feed in here</div>
+          <div class="panel-body">Feed. Will extend accordingly.</div>
+        </div>
+        <div class="panel panel-primary">
+          <div class="panel-heading">Facebook feed in here</div>
+          <div class="panel-body">Feed. Will extend accordingly.</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <div class="container-fluid">
-    <h3> Sponsors</h3>
-    <ul class="list-group">
-  <li class="list-group-item disabled">Sponsor 1</li>
-  <li class="list-group-item">Sponsor 2</li>
-  <li class="list-group-item">Sponsor 3</li>
-  <li class="list-group-item">Sponsor 4</li>
-</ul>
-<h3><a routerLink="/club"> Go to club</a></h3>
+  <h3> Players</h3>
+  <div class="list-group">
+    <a href="/player" class="list-group-item list-group-item-action">Player 1</a>
+    <a href="#" class="list-group-item list-group-item-action">Player 2</a>
+    <a href="#" class="list-group-item list-group-item-action">Player 3</a>
+    <a href="#" class="list-group-item list-group-item-action disabled">Player 4</a>
+  </div>
 </div>
-    </body>
+<div class="container-fluid">
+  <h3> Sponsors</h3>
+  <ul class="list-group">
+    <li class="list-group-item disabled">Sponsor 1</li>
+    <li class="list-group-item">Sponsor 2</li>
+    <li class="list-group-item">Sponsor 3</li>
+    <li class="list-group-item">Sponsor 4</li>
+  </ul>
+  <h3><a routerLink="/club"> Go to club</a></h3>
+</div>
+</body>
 </html>
