--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,20 +1,18 @@
 <div *ngIf="post">
 
   <div class="row">
-    <div class="col-xs-12 col-xs-offset-0 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+    <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">
-            <a>{{post.name}}</a>
+            <a (click)="sendToAuthor()">{{post.name}}</a>
           </h2>
         </div>
         <div class="panel-body">
 
           <div class="media">
             <div class="media-left">
-              <a href="#">
-                <img class="media-object" src="{{post.image}}" alt="Avatar for {{post.name}}">
-              </a>
+              <img class="media-object" src="{{post.image}}" alt="Avatar for {{post.name}}">
             </div>
             <div class="media-body">
               <h4 class="media-heading"> {{post.title}} </h4>
