--- a/src/app/player-profile/player.component.html
+++ b/src/app/player-profile/player.component.html
@@ -6,6 +6,10 @@
       <div class="row">
         <div class="col-md-12 lead">
           Player Profile
+
+          <button *ngIf="!userFollowing" (click)="followPlayer()" type="button" class="btn btn-sm btn-primary pull-right">Follow</button>
+          <button *ngIf="userFollowing" (click)="unfollowPlayer()" type="button" class="btn btn-sm btn-danger pull-right">Unfollow</button>
+
           <hr>
         </div>
       </div>
