--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Latest compiled and minified CSS -->
-<html lang="en" ng-app="skeleton_app">
+<html lang="en">
 
 <head>
   <title>User Profile</title>
@@ -13,7 +13,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7" />
+  <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7"/>
 </head>
 
 <body>
@@ -26,10 +26,12 @@
             <div class="row">
               <div class="col-md-12 lead">User profile
                 <hr>
+
               </div>
             </div>
             <div class="row">
               <div class="col-md-4 text-center">
+
                 <img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
               display:block; margin:auto;" src="{{(profileData | async)?.avatar}}">
               </div>
@@ -39,10 +41,12 @@
                     <h2 class="only-bottom-margin"> {{(profileData | async)?.name}}
                       <span class="badge badge-success" *ngIf="currentUser === userId">Me</span>
                     </h2>
+
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
+
                     <span *ngIf="currentUser === userId" class="text-muted">Email:</span> {{(profileData | async)?.email}} <br>
                   </div>
                 </div>
@@ -50,34 +54,49 @@
             </div>
             <hr>
             <div class="row">
+
               <div class="col-md-12 lead">Following</div>
             </div>
             <div class="row">
-              <div class="col-md-6 ">
+              <div class="col-md-4 ">
+
                 <div class="list-group" *ngIf="followingTeams">
-                  <a class="list-group-item active lead text-center"> Teams </a>
-                  <div *ngFor="let team of followingTeams | async" class="list-group-item list-group-item-action">
-                    <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
+                  <a class="list-group-item active lead text-center"> Teams<span class="badge badge-pill badge-info">{{noTeams}}</span></a>
+                  <div *ngFor="let team of followingTeams | async; let i = index" class="list-group-item list-group-item-action">
+                    <a (click)="sendToTeam(team.id)" *ngIf="i<11"> {{team.name}} </a>
+                    
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">Unfollow</button>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 ">
+              <div class="col-md-4 ">
                 <div class="list-group" *ngIf="followingPlayers">
-                  <a class="list-group-item active lead text-center"> Players </a>
-                  <div *ngFor="let player of followingPlayers | async" class="list-group-item list-group-item-action">
-                    <a (click)="sendToPlayer(player.id)"> {{player.first_name + " " + player.last_name}} </a>
+                  <a class="list-group-item active lead text-center"> Players<span class="badge badge-pill badge-info">{{noPlayers}}</span> </a>
+                  <div *ngFor="let player of followingPlayers | async; let i = index" class="list-group-item list-group-item-action">
+                    <a (click)="sendToPlayer(player.id)" *ngIf="i<11"> {{player.first_name + " " + player.last_name}} </a>
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowPlayer(player.id)">Unfollow</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 ">
+                <div class="list-group" *ngIf="followingClubs">
+                  <a class="list-group-item active lead text-center"> Clubs<span class="badge badge-pill badge-info">{{noClubs}}</span> </a>
+                  <div *ngFor="let club of followingClubs | async; let i = index" class="list-group-item list-group-item-action">
+                    <a (click)="sendToClub(club.id)" *ngIf="i<11"> {{club.name}} </a>
+                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowClub(club.id)">Unfollow</button>
                   </div>
                 </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6 text-center" *ngIf="(followingTeams | async)?.length > 0">
-                <a routerLink="/teamsFollowed">See all</a>
+              <div class="col-md-4 text-center" *ngIf="(followingTeams | async)?.length > 0">  <!-- left it at 0 until we populate the lists, so we can see the list -->
+                <a routerLink="/teamsFollowed/{{currentUser}}">See all</a>
               </div>
-              <div class="col-md-6 text-center" *ngIf="(followingPlayers | async)?.length > 0">
-                <a routerLink="/playersFollowed">See all</a>
+              <div class="col-md-4 text-center" *ngIf="(followingPlayers | async)?.length > 10">
+                <a routerLink="/playersFollowed/{{currentUser}}">See all</a>
+              </div>
+              <div class="col-md-4 text-center" *ngIf="(followingClubs | async)?.length > 10">
+                <a routerLink="/clubsFollowed/{{currentUser}}">See all</a>
               </div>
             </div>
             <hr>
