--- a/src/app/teams-followed/teams-followed.html
+++ b/src/app/teams-followed/teams-followed.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container-fluid">
 <div class="list-group">
-  <a class="list-group-item lead text-center"> Teams </a>
+  <a class="list-group-item active lead text-center"> Teams </a>
   <div *ngFor="let team of followingTeams | async" class="list-group-item list-group-item-action">
     <div class="row">
     <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
