--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -67,9 +67,9 @@
 
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">Unfollow</button>
                   </div>
+                  <div class="list-group-item list-group-item-action" *ngIf="(followingTeams | async)?.length > 0">  <!-- left it at 0 until we populate the lists, so we can see the list -->
+                    <a (click)="sendToTeamsList(currentUser)">See all</a>
                 </div>
-                <div class="col-md-4 pull-right" *ngIf="(followingTeams | async)?.length > 0">  <!-- left it at 0 until we populate the lists, so we can see the list -->
-                  <a (click)="sendToTeamsList(currentUser)">See all</a>
                 </div>
               </div>
               <div class="col-md-4 ">
@@ -79,9 +79,9 @@
                     <a (click)="sendToPlayer(player.id)" *ngIf="i<11"> {{player.first_name + " " + player.last_name}} </a>
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowPlayer(player.id)">Unfollow</button>
                   </div>
-                </div>
-                <div class="col-md-4 pull-right" *ngIf="(followingPlayers | async)?.length > 10">
-                  <a (click)="sendToPlayersList(currentUser)">See all</a>
+                  <div class="list-group-item list-group-item-action" *ngIf="(followingPlayers | async)?.length > 10">
+                    <a (click)="sendToPlayersList(currentUser)">See all</a>
+                  </div>
                 </div>
               </div>
               <div class="col-md-4 ">
@@ -91,9 +91,9 @@
                     <a (click)="sendToClub(club.id)" *ngIf="i<11"> {{club.name}} </a>
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowClub(club.id)">Unfollow</button>
                   </div>
-                </div>
-                <div class="col-md-4 pull-right" *ngIf="(followingClubs | async)?.length > 10">
-                  <a (click)="sendToClubsList(currentUser)">See all</a>
+                  <div class="list-group-item list-group-item-action" *ngIf="(followingClubs | async)?.length > 10">
+                    <a (click)="sendToClubsList(currentUser)">See all</a>
+                  </div>
                 </div>
               </div>
             </div>
