--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -2,8 +2,14 @@
   color: black;
 }
 
-.media-object {
+.post-image {
   border-radius: 10%;
   height: 64px;
   width: 64px;
+}
+
+.comment-image {
+  border-radius: 10%;
+  height: 48px;
+  width: 48px;
 }
