--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -67,7 +67,7 @@
 
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">Unfollow</button>
                   </div>
-                  <div class="list-group-item list-group-item-action" *ngIf="(followingTeams | async)?.length > 0">  <!-- left it at 0 until we populate the lists, so we can see the list -->
+                  <div class="list-group-item list-group-item-action" *ngIf="(followingTeams | async)?.length > 10">
                     <a (click)="sendToTeamsList(currentUser)">See all</a>
                 </div>
                 </div>
