--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -62,12 +62,14 @@
 
                 <div class="list-group" *ngIf="followingTeams">
                   <a class="list-group-item active lead text-center"> Teams<span class="badge badge-pill badge-info">{{noTeams}}</span></a>
-                  <div *ngFor="let team of followingTeams | async; let i = index" class="list-group-item list-group-item-action">
-                    <a (click)="sendToTeam(team.id)" *ngIf="i<11"> {{team.name}} </a>
+                  <div *ngFor="let team of followingTeams | async; let i = index">
+                    <div class="list-group-item list-group-item-action" *ngIf="i<10">
+                    <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
 
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">Unfollow</button>
                   </div>
-                  <div class="list-group-item list-group-item-action" *ngIf="(followingTeams | async)?.length > 0">  <!-- left it at 0 until we populate the lists, so we can see the list -->
+                </div>
+                  <div class="list-group-item list-group-item-action" *ngIf="(followingTeams | async)?.length > 10"> 
                     <a (click)="sendToTeamsList(currentUser)">See all</a>
                 </div>
                 </div>
@@ -75,10 +77,12 @@
               <div class="col-md-4 ">
                 <div class="list-group" *ngIf="followingPlayers">
                   <a class="list-group-item active lead text-center"> Players<span class="badge badge-pill badge-info">{{noPlayers}}</span> </a>
-                  <div *ngFor="let player of followingPlayers | async; let i = index" class="list-group-item list-group-item-action">
-                    <a (click)="sendToPlayer(player.id)" *ngIf="i<11"> {{player.first_name + " " + player.last_name}} </a>
+                  <div *ngFor="let player of followingPlayers | async; let i = index">
+                    <div class="list-group-item list-group-item-action" *ngIf="i<10">
+                    <a (click)="sendToPlayer(player.id)" > {{player.first_name + " " + player.last_name}} </a>
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowPlayer(player.id)">Unfollow</button>
                   </div>
+                </div>
                   <div class="list-group-item list-group-item-action" *ngIf="(followingPlayers | async)?.length > 10">
                     <a (click)="sendToPlayersList(currentUser)">See all</a>
                   </div>
@@ -87,10 +91,12 @@
               <div class="col-md-4 ">
                 <div class="list-group" *ngIf="followingClubs">
                   <a class="list-group-item active lead text-center"> Clubs<span class="badge badge-pill badge-info">{{noClubs}}</span> </a>
-                  <div *ngFor="let club of followingClubs | async; let i = index" class="list-group-item list-group-item-action">
-                    <a (click)="sendToClub(club.id)" *ngIf="i<11"> {{club.name}} </a>
+                  <div *ngFor="let club of followingClubs | async; let i = index">
+                    <div class="list-group-item list-group-item-action" *ngIf="i<10">
+                    <a (click)="sendToClub(club.id)"> {{club.name}} </a>
                     <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowClub(club.id)">Unfollow</button>
                   </div>
+                </div>
                   <div class="list-group-item list-group-item-action" *ngIf="(followingClubs | async)?.length > 10">
                     <a (click)="sendToClubsList(currentUser)">See all</a>
                   </div>
