[AM] Comment time better format

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -95,7 +95,7 @@
                   {{postComment.comment}}
 
                   <br>
-                  <small><em>{{postComment.commented_at | amTimeAgo}}</em></small>
+                  <small><em>{{postComment.commented_at | amCalendar}}</em></small>
 
                 </div>
               </div>
