--- a/src/app/team-profile/team-component.html
+++ b/src/app/team-profile/team-component.html
@@ -28,6 +28,7 @@
             <div class="media-body">
               <h3 class="media-heading">{{(teamData | async)?.name}}</h3>
 
+              <em>Club:</em> {{(clubData | async)?.name}}<br>
               <em>Age group:</em> {{(teamData | async)?.age_group}}<br>
               <em>Type:</em> {{(teamData | async)?.type}}<br>
               <em>Gender:</em> {{(teamData | async)?.gender}}<br>
@@ -61,8 +62,17 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12">
           <div *ngFor="let player of teamPlayers">
-            <div class="list-group-item list-group-item-action">
-              <a (click)="sendToPlayer(player.id)">{{player.first_name + " " + player.last_name}}</a>
+            <div class="list-group-item list-group-item-action media">
+              <div class="media-left">
+                <a href="#">
+                  <img class="player-image" src="{{player.avatar}}" alt="{{player.first_name + ' ' + player.last_name}}">
+                </a>
+              </div>
+              <div class="media-body">
+                <a (click)="sendToPlayer(player.id)">{{player.first_name + " " + player.last_name}}</a>
+                <button *ngIf="follows.indexOf(player.id) === -1" (click)="followPlayer(player.id)" type="button" class="btn btn-sm btn-primary pull-right">Follow</button>
+                <button *ngIf="follows.indexOf(player.id) !== -1" (click)="unfollowPlayer(player.id)" type="button" class="btn btn-sm btn-danger pull-right">Unfollow</button>
+              </div>
             </div>
           </div>
         </div>
