--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,17 +1,25 @@
 
-
-
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Players</h3>
-  </div>
-  <div class="panel-body">
-    <ul *ngFor="let player of players">
-      <li>{{player.first_name}}</li>
-    </ul>
+<div>
+  <div *ngFor="let player of players" class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{player.first_name}} {{player.last_name}}</h3>
+      </div>
+    
+    <div class="panel-body">
+      <div class="col-md-4">
+        <img src={{player.avatar}} class="as-banner" />
+      </div>
+      <div class="col-md-8">
+        <ul class="list-unstyled">
+          <li class="list-goup-item">Location: {{player?.location.city}}</li>
+          <li class="list-goup-item">Age: {{player?.age}}</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
+
+
 
 
 
