--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -7,7 +7,7 @@
     
     <div class="panel-body">
       <div class="col-md-4">
-        <img src={{player.avatar}} class="as-banner" />
+        <img src="{{player.avatar}}" class="as-banner" />
       </div>
       <div class="col-md-8">
         <ul class="list-unstyled">
