--- a/src/app/team-profile/team-component.html
+++ b/src/app/team-profile/team-component.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
           <div *ngFor="let player of teamPlayers">
             <div class="list-group-item list-group-item-action media">
               <div class="media-left">
