Clubs work now. Problem was that there were no team-club associations in the database, so nothing displayed.

--- a/src/app/player-profile/player.component.html
+++ b/src/app/player-profile/player.component.html
@@ -42,7 +42,7 @@
                 </a>
               </div>
               <div class="media-body">
-                <a (click)="sendToTeam(team.$key)">{{(getTeam(team.$key))?.name}}</a>
+                <a (click)="sendToTeam(team.$key)">{{(getTeam(team.$key))?.name}}, {{getClub(team.$key)?.name}}</a>
               </div>
             </div>
           </div>
